--- a/styles.css
+++ b/styles.css
@@ -7,17 +7,40 @@ html { -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: 
 *, *:before, *:after {box-sizing: inherit}
 
 .sr-only { position: absolute; width: 1px; height: 1px; margin: -1px; border: 0; padding: 0; white-space: nowrap; clip-path: inset(100%); clip: rect(0 0 0 0); overflow: hidden;}
+/* Color Theme Swatches in Hex */
+/* .Color-Theme-2-1-hex { color: #0D0D0D; } black
+.Color-Theme-2-2-hex { color: #FFFFFF; } background 
+.Color-Theme-2-3-hex { color: #F2F2F2; } green or #D1D7CB?
+.Color-Theme-2-4-hex { color: #C1C2C6; } font */
 
 /* general styling */
 html {
     font-size: 62.5%;
     font-family: 'Lato', sans-serif;
+    font-weight: 300;
+    letter-spacing: 1px;
+    line-height: 15px;
 }
 
 h1,
 h2,
-h3 {
+h3, 
+button {
     font-family: 'Karla', sans-serif;
+    font-weight: 300;
+    text-transform: uppercase;
+}
+
+ul {
+    list-style: none;
+    margin: 0 auto;
+    text-transform: uppercase;
+}
+
+.largeWrapper {
+    width: 90%;
+    max-width: 1280px;
+    margin: 0 auto;
 }
 
 .wrapper {
@@ -26,15 +49,36 @@ h3 {
     margin: 0 auto;
 }
 
+/* nav bar */
+.navBar {
+    display: flex;
+    justify-content: space-between;
+}
+
+/* header/hero */
+
+/* bio */
+
 img {
     width: 400px;
 }
 
-/* Color Theme Swatches in Hex */
-/* .Color-Theme-2-1-hex { color: #0D0D0D; } black
-.Color-Theme-2-2-hex { color: #FFFFFF; } background 
-.Color-Theme-2-3-hex { color: #F2F2F2; } green or #D1D7CB?
-.Color-Theme-2-4-hex { color: #C1C2C6; } font */
+/* skills */
+.skillsList {
+    display: flex;
+}
+
+/* projects */
+
+    /* project1 */
+    /* project2 */
+    /* project3 */
+
+/* footer */
+.contactList{
+    display: flex;
+    justify-content: space-between;
+}
 
 
 
