--- a/styles/sass/style.scss
+++ b/styles/sass/style.scss
@@ -1,2 +1,5 @@
+@import "./partials/variables";
+@import "./partials/setup";
+@import "./partials/general";
+@import "./partials/headerFooter";
 @import "./partials/main";
-@import "./partials/general"
