--- a/styles/sass/partials/_general.scss
+++ b/styles/sass/partials/_general.scss
@@ -1,17 +1,13 @@
-
-/* Color Theme Swatches in Hex */
-/* .Color-Theme-2-1-hex { color: #0D0D0D; } black
-.Color-Theme-2-2-hex { color: #FFFFFF; } background 
-.Color-Theme-2-3-hex { color: #F2F2F2; } green or #D1D7CB?
-.Color-Theme-2-4-hex { color: #C1C2C6; } font */
-
 /* general styling */
 html {
     font-size: 62.5%;
     font-family: 'Lato', sans-serif;
     font-weight: 300;
     letter-spacing: 1px;
-    line-height: 15px;
+    line-height: 20px;
+    color: #0D0D0D;
+    background-color: #ffffff;
+    scroll-behavior: smooth;
 }
 
 h1,
@@ -25,8 +21,13 @@ button {
 
 ul {
     list-style: none;
-    margin: 0 auto;
+    margin: 0;
     text-transform: uppercase;
+}
+
+a {
+    text-decoration: none;
+    color: $black;
 }
 
 .largeWrapper {
