--- a/styles/sass/partials/_variables.scss
+++ b/styles/sass/partials/_variables.scss
@@ -3,5 +3,5 @@
 .Color-Theme-2-3-hex { color: #f3f7f5; } green
 .Color-Theme-2-4-hex { color: #C1C2C6; } font */
 
-$greenBackground: #eef2f0;
+$greenBackground: #e2e9e6d6;
 $black: #0D0D0D;
