--- a/styles/style.css
+++ b/styles/style.css
@@ -295,7 +295,7 @@ a {
 
 /* header/hero */
 header {
-  height: 90vh;
+  height: 95vh;
 }
 
 .hero {
@@ -322,8 +322,21 @@ h2 {
   letter-spacing: 5px;
 }
 
+footer {
+  text-align: center;
+}
+
+.contactList {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
 .bio {
-  background-color: #eef2f0;
+  background-color: #e2e9e6d6;
   padding: 125px 0;
   width: 100%;
 }
@@ -351,15 +364,19 @@ h2 {
   margin-top: -225px;
 }
 
+.bioContainer h2 {
+  margin-top: 50px;
+}
+
 .bioContainer p {
   width: 500px;
   font-size: 1.5rem;
   text-align: center;
-  margin: 75px 0;
+  margin-bottom: 75px;
 }
 
 .skills {
-  padding: 50px 0;
+  padding: 100px 0;
 }
 
 .skillsContainer {
@@ -406,11 +423,74 @@ h2 {
   color: #0D0D0D;
 }
 
-.contactList {
+h3 {
+  font-size: 2.0rem;
+}
+
+.projects h2 {
+  padding: 50px 0;
+}
+
+.projects h3 {
+  margin-top: 0;
+}
+
+.project1,
+.project2,
+.project3 {
+  background-color: #e2e9e6d6;
+  margin-bottom: 200px;
+  padding: 50px 0;
+}
+
+.project1,
+.project3 {
+  margin-left: 10%;
+}
+
+.project2 {
+  margin-right: 10%;
+  text-align: right;
+}
+
+.projectContainer {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+}
+
+.projectInfo {
+  width: 40%;
+}
+
+.projectContainer img {
+  width: 100%;
+  border: 2px solid black;
+  margin-top: -100px;
+}
+
+.projectImg {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  width: 60%;
+}
+
+.project1 .projectImg,
+.project3 .projectImg {
+  margin-right: -50px;
+}
+
+.project2 .projectImg {
+  margin-left: -50px;
 }
