--- a/styles/sass/partials/_headerFooter.scss
+++ b/styles/sass/partials/_headerFooter.scss
@@ -1,24 +1,64 @@
 /* nav bar */
+
 .navBar {
     display: flex;
     justify-content: space-between;
+    padding: 20px 0;
 }
+
+.navMenu {
+    height: 100%;
+    width: 0px; //200px
+    position: fixed;
+    z-index: 1;
+    top: 0;
+    right: 0;
+    background-color: $black;
+    overflow-x: hidden;
+    overflow-y: scroll;
+    transition: 0.5s;
+    padding: 0px; //20px
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+    
+}
+
+nav a {
+    color: white;
+    padding: 5px;
+}
+
+.burgerOpen,
+.burgerClose {
+    font-size: 1.5rem;
+    color: $black;
+}
+.burgerClose {
+    color: white;
+}
+
 
 /* header/hero */
 header {
     height: 95vh;
+    position: relative;
 }
 
 .hero {
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-top: 30px;
+    margin-top: 75px;
 }
 
 h1 {
     font-size: 4.0rem;
     letter-spacing: 15px;
+}
+
+h1 span {
+    color: $greenStyle;
 }
 
 h2 {
@@ -29,9 +69,21 @@ h2 {
 /////* footer */////
 footer {
     text-align: center;
+    color: white;
+    background-color: $black;
+    padding: 10px 0;
 }
 
 .contactList{
     display: flex;
     justify-content: space-between;
+}
+
+.contactList li i {
+    color: white;
+    font-size: 1.5rem;
+}
+
+.contactList li i:hover{
+    color: $greenStyle;
 }
