--- a/styles/style.css
+++ b/styles/style.css
@@ -263,12 +263,24 @@ button {
 ul {
   list-style: none;
   margin: 0;
+  padding: 0;
   text-transform: uppercase;
+}
+
+button {
+  border: none;
+  padding: none;
+  background: none;
 }
 
 a {
   text-decoration: none;
   color: #0D0D0D;
+}
+
+a:hover,
+i:hover {
+  color: #b4c6be;
 }
 
 .largeWrapper {
@@ -291,11 +303,52 @@ a {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+  padding: 20px 0;
+}
+
+.navMenu {
+  height: 100%;
+  width: 0px;
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  right: 0;
+  background-color: #0D0D0D;
+  overflow-x: hidden;
+  overflow-y: scroll;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+  padding: 0px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+}
+
+nav a {
+  color: white;
+  padding: 5px;
+}
+
+.burgerOpen,
+.burgerClose {
+  font-size: 1.5rem;
+  color: #0D0D0D;
+}
+
+.burgerClose {
+  color: white;
 }
 
 /* header/hero */
 header {
   height: 95vh;
+  position: relative;
 }
 
 .hero {
@@ -309,12 +362,16 @@ header {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  margin-top: 30px;
+  margin-top: 75px;
 }
 
 h1 {
   font-size: 4.0rem;
   letter-spacing: 15px;
+}
+
+h1 span {
+  color: #b4c6be;
 }
 
 h2 {
@@ -324,6 +381,9 @@ h2 {
 
 footer {
   text-align: center;
+  color: white;
+  background-color: #0D0D0D;
+  padding: 10px 0;
 }
 
 .contactList {
@@ -333,6 +393,15 @@ footer {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+}
+
+.contactList li i {
+  color: white;
+  font-size: 1.5rem;
+}
+
+.contactList li i:hover {
+  color: #b4c6be;
 }
 
 .bio {
@@ -468,7 +537,6 @@ h3 {
 
 .projectContainer img {
   width: 100%;
-  border: 2px solid black;
   margin-top: -100px;
 }
 
