--- a/styles/sass/partials/_headerFooter.scss
+++ b/styles/sass/partials/_headerFooter.scss
@@ -1,9 +1,19 @@
 /* nav bar */
 
+header {
+    height: 95vh;
+    // position: relative;
+}
+
+.banner {
+    border: 2px solid red;
+}
+
 .navBar {
     display: flex;
     justify-content: space-between;
-    padding: 20px 0;
+    padding: 10px 0;
+    font-size: 1.5rem;
 }
 
 .navMenu {
@@ -13,7 +23,7 @@
     z-index: 1;
     top: 0;
     right: 0;
-    background-color: $black;
+    background-color: rgba(13, 13, 13, 0.8);
     overflow-x: hidden;
     overflow-y: scroll;
     transition: 0.5s;
@@ -23,15 +33,22 @@
     align-items: flex-start;
     
 }
+nav li {
+    margin-bottom: 15px
+}
 
 nav a {
     color: white;
     padding: 5px;
 }
 
+nav a:hover {
+    letter-spacing: 2px;
+}
+
 .burgerOpen,
 .burgerClose {
-    font-size: 1.5rem;
+    font-size: 1.8rem;
     color: $black;
 }
 .burgerClose {
@@ -39,17 +56,15 @@ nav a {
 }
 
 
-/* header/hero */
-header {
-    height: 95vh;
-    position: relative;
-}
+/*/hero */
+
 
 .hero {
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-top: 75px;
+    padding-top: 100px;
+    line-height: 30px;
 }
 
 h1 {
@@ -81,7 +96,7 @@ footer {
 
 .contactList li i {
     color: white;
-    font-size: 1.5rem;
+    font-size: 2.0rem;
 }
 
 .contactList li i:hover{
