--- a/styles/style.css
+++ b/styles/style.css
@@ -247,7 +247,7 @@ html {
   letter-spacing: 1px;
   line-height: 20px;
   color: #0D0D0D;
-  background-color: #ffffff;
+  background-color: #f7f7f7;
   scroll-behavior: smooth;
 }
 
@@ -278,9 +278,16 @@ a {
   color: #0D0D0D;
 }
 
+p {
+  font-size: 1.8rem;
+  line-height: 30px;
+}
+
 a:hover,
 i:hover {
   color: #b4c6be;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
 }
 
 .largeWrapper {
@@ -296,6 +303,14 @@ i:hover {
 }
 
 /* nav bar */
+header {
+  height: 95vh;
+}
+
+.banner {
+  border: 2px solid red;
+}
+
 .navBar {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -303,7 +318,8 @@ i:hover {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  padding: 20px 0;
+  padding: 10px 0;
+  font-size: 1.5rem;
 }
 
 .navMenu {
@@ -313,7 +329,7 @@ i:hover {
   z-index: 1;
   top: 0;
   right: 0;
-  background-color: #0D0D0D;
+  background-color: rgba(13, 13, 13, 0.8);
   overflow-x: hidden;
   overflow-y: scroll;
   -webkit-transition: 0.5s;
@@ -330,14 +346,22 @@ i:hover {
           align-items: flex-start;
 }
 
+nav li {
+  margin-bottom: 15px;
+}
+
 nav a {
   color: white;
   padding: 5px;
 }
 
+nav a:hover {
+  letter-spacing: 2px;
+}
+
 .burgerOpen,
 .burgerClose {
-  font-size: 1.5rem;
+  font-size: 1.8rem;
   color: #0D0D0D;
 }
 
@@ -345,12 +369,7 @@ nav a {
   color: white;
 }
 
-/* header/hero */
-header {
-  height: 95vh;
-  position: relative;
-}
-
+/*/hero */
 .hero {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -362,7 +381,8 @@ header {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  margin-top: 75px;
+  padding-top: 100px;
+  line-height: 30px;
 }
 
 h1 {
@@ -397,7 +417,7 @@ footer {
 
 .contactList li i {
   color: white;
-  font-size: 1.5rem;
+  font-size: 2.0rem;
 }
 
 .contactList li i:hover {
@@ -406,7 +426,7 @@ footer {
 
 .bio {
   background-color: #e2e9e6d6;
-  padding: 125px 0;
+  padding: 100px 0;
   width: 100%;
 }
 
@@ -439,13 +459,32 @@ footer {
 
 .bioContainer p {
   width: 500px;
-  font-size: 1.5rem;
   text-align: center;
-  margin-bottom: 75px;
+  margin-bottom: 20px;
 }
 
 .skills {
   padding: 100px 0;
+}
+
+.skills h2,
+.bio h2,
+.projects h2 {
+  position: relative;
+}
+
+.skills h2::after,
+.bio h2::after,
+.projects h2::after {
+  position: absolute;
+  content: '';
+  background: blue;
+  height: 3px;
+  margin: 0 auto;
+  left: 0;
+  right: 0;
+  top: 30px;
+  width: 100%;
 }
 
 .skillsContainer {
@@ -492,16 +531,16 @@ footer {
   color: #0D0D0D;
 }
 
-h3 {
-  font-size: 2.0rem;
-}
-
 .projects h2 {
-  padding: 50px 0;
+  margin-bottom: 100px;
 }
 
-.projects h3 {
-  margin-top: 0;
+h3 {
+  font-size: 2.5rem;
+}
+
+.projects {
+  padding: 50px 0;
 }
 
 .project1,
@@ -515,6 +554,8 @@ h3 {
 .project1,
 .project3 {
   margin-left: 10%;
+  -webkit-animation: fade-right;
+          animation: fade-right;
 }
 
 .project2 {
@@ -537,7 +578,8 @@ h3 {
 
 .projectContainer img {
   width: 100%;
-  margin-top: -100px;
+  height: auto;
+  margin-top: -120px;
 }
 
 .projectImg {
@@ -554,6 +596,10 @@ h3 {
   width: 60%;
 }
 
+.projectLink {
+  margin-top: 40px;
+}
+
 .project1 .projectImg,
 .project3 .projectImg {
   margin-right: -50px;
@@ -561,4 +607,27 @@ h3 {
 
 .project2 .projectImg {
   margin-left: -50px;
+}
+
+main button {
+  padding: 0;
+}
+
+.project1 button,
+.project3 button {
+  margin-right: 10px;
+}
+
+.project2 button {
+  margin-left: 10px;
+}
+
+main button a {
+  border: 2px solid black;
+  font-size: 1.8rem;
+  padding: 5px;
+}
+
+main button a:hover {
+  background: #0D0D0D;
 }
