--- a/styles/sass/partials/_main.scss
+++ b/styles/sass/partials/_main.scss
@@ -17,7 +17,6 @@ main {
         font-size: 3.0rem;
         position: relative;
         display: inline-block;
-        margin: 0;
     }
 
     h2::after {
@@ -56,7 +55,7 @@ main {
         }
 
         p {
-            width: 700px;
+            width: 70%;
             text-align: center;
             margin-bottom: 20px; 
         }
@@ -177,31 +176,43 @@ main {
         justify-content: space-between;
         align-items: flex-start;
         padding-bottom: 150px;
+
+        h2 {
+            margin-top: 0;
+        }
         
         .contactContainer {
-            width: 40%;
+            width: 50%;
+
+            .email {
+                text-decoration: underline;
+            }
         }
 
         .contactList {
-            width: 50%;
             display: flex;
+            justify-content: space-around;
+            align-items: flex-start;
             flex-wrap: wrap;
-            justify-content: space-between;
+            width: 60%;
 
-            li {
-      
-                i {
-                    color: $black;
-                    font-size: 4.5rem; 
-                }
+            li{
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                padding-bottom: 50px;
+                width: 50%;
+            }
 
-                i:hover {
-                    color: $greenStyle;
-                }
+            i {
+                color: $black;
+                font-size: 4.0rem; 
+            }
 
+            i:hover {
+                color: $greenStyle;
             }
         }
-        
     }
 }
 
