--- a/styles/sass/partials/_headerFooter.scss
+++ b/styles/sass/partials/_headerFooter.scss
@@ -16,7 +16,7 @@ header {
             display: flex;
             justify-content: space-between;
             align-items: center;
-            padding: 7px 0;
+            padding: 5px 0;
             font-size: 1.5rem;
     
             .logo img {
@@ -34,7 +34,7 @@ header {
 
             nav {
                 li {
-                    margin-bottom: 20px;
+                    margin: 20px 0;
                     font-size: 1.8rem;
                 }
     
