--- a/styles/style.css
+++ b/styles/style.css
@@ -325,7 +325,7 @@ header .banner .navBar {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  padding: 7px 0;
+  padding: 5px 0;
   font-size: 1.5rem;
 }
 
@@ -343,7 +343,7 @@ header .banner .navBar .burgerOpen:hover {
 }
 
 header .banner .navBar nav li {
-  margin-bottom: 20px;
+  margin: 20px 0;
   font-size: 1.8rem;
 }
 
@@ -515,14 +515,16 @@ main .skillsList {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
   width: 60%;
+  text-align: center;
 }
 
 main .skillsList li {
@@ -584,10 +586,6 @@ main .projects .project2 .projectImg {
   margin-left: -50px;
 }
 
-main .projects .projectInfo {
-  width: 40%;
-}
-
 main .projects .project1 button,
 main .projects .project3 button {
   margin-right: 10px;
@@ -604,6 +602,11 @@ main .projects .projectContainer {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+  width: 80%;
+}
+
+main .projects .projectContainer .projectInfo {
+  width: 40%;
 }
 
 main .projects .projectContainer .projectImg {
@@ -622,7 +625,6 @@ main .projects .projectContainer .projectImg {
 
 main .projects .projectContainer .projectImg img {
   width: 100%;
-  height: auto;
   margin-top: -120px;
 }
 
@@ -640,7 +642,7 @@ main .contact {
   -webkit-box-align: start;
       -ms-flex-align: start;
           align-items: flex-start;
-  padding-bottom: 150px;
+  padding-bottom: 100px;
 }
 
 main .contact h2 {
@@ -659,8 +661,9 @@ main .contact .contactList {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   -webkit-box-align: start;
       -ms-flex-align: start;
           align-items: flex-start;
@@ -691,4 +694,69 @@ main .contact .contactList i {
 
 main .contact .contactList i:hover {
   color: #b4c6be;
+}
+
+@media (max-width: 1065px) {
+  html {
+    font-size: 50%;
+  }
+}
+
+@media (max-width: 1000px) {
+  main .projects .projectContainer {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  main .projects .projectContainer .projectInfo,
+  main .projects .projectContainer .projectImg {
+    width: 100%;
+  }
+  main .projects .projectContainer .projectImg img {
+    width: 100%;
+    margin-top: 0px;
+  }
+  main .projects .project2 .projectInfo {
+    -webkit-box-ordinal-group: 2;
+        -ms-flex-order: 1;
+            order: 1;
+  }
+  main .projects .project2 .projectImg {
+    -webkit-box-ordinal-group: 3;
+        -ms-flex-order: 2;
+            order: 2;
+    margin-left: 0;
+  }
+}
+
+@media (max-width: 725px) {
+  html {
+    font-size: 45%;
+  }
+  header .hero h1 {
+    line-height: 40px;
+  }
+  main .skills .skillsContainer {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  main .skills .skillsList {
+    width: 100%;
+  }
+  main .contact {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  main .contact .contactContainer,
+  main .contact .contactList {
+    width: 100%;
+  }
+  main .contact .contactList {
+    padding-top: 30px;
+  }
 }
