--- a/styles/sass/partials/_mediaQueries.scss
+++ b/styles/sass/partials/_mediaQueries.scss
@@ -39,7 +39,7 @@
     html {
         font-size: 45%;
     }
-    
+
     header {
         .hero h1 {
             line-height: 40px;
@@ -65,7 +65,7 @@
             }
 
             .contactList {
-                padding-top: 30px;
+                margin-top: 25%;
             }
         }
     }
