--- a/styles/style.css
+++ b/styles/style.css
@@ -333,8 +333,9 @@ header .banner .navBar .logo img {
   width: 50px;
 }
 
-header .banner .navBar .burgerOpen {
-  font-size: 25px;
+header .banner .navBar .burgerOpen,
+header .banner .navBar .burgerClose {
+  font-size: 30px;
   color: white;
 }
 
@@ -382,12 +383,6 @@ header .banner .navBar nav .navMenu {
           align-items: flex-start;
 }
 
-header .banner .navBar nav .burgerOpen,
-header .banner .navBar nav .burgerClose {
-  font-size: 2.5rem;
-  color: white;
-}
-
 header .hero {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -432,13 +427,24 @@ main button {
 }
 
 main button a {
-  border: 2px solid black;
+  border: 2px solid #0D0D0D;
   font-size: 1.8rem;
   padding: 5px;
+  border-radius: 0px;
+  background: linear-gradient(145deg, #ffffff, #e5e6e6);
+  -webkit-box-shadow: 1px 1px 10px #666666,  -1px -1px 5px #ffffff;
+          box-shadow: 1px 1px 10px #666666,  -1px -1px 5px #ffffff;
 }
 
 main button a:hover {
   background: #0D0D0D;
+}
+
+main button a:active {
+  border-radius: 0px;
+  background: #feffff;
+  -webkit-box-shadow: inset 2px 2px 10px #666666,  inset -2px -2px 5px #ffffff;
+          box-shadow: inset 2px 2px 10px #666666,  inset -2px -2px 5px #ffffff;
 }
 
 main h2 {
@@ -551,10 +557,6 @@ main h3 {
   font-size: 2.5rem;
 }
 
-main .projects {
-  padding: 50px 0;
-}
-
 main .projects h2 {
   margin-bottom: 100px;
 }
@@ -570,11 +572,15 @@ main .projects .project3 {
 main .projects .project1,
 main .projects .project3 {
   margin-left: 10%;
+  -webkit-box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.47);
+          box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.47);
 }
 
 main .projects .project2 {
   margin-right: 10%;
   text-align: right;
+  -webkit-box-shadow: -10px 10px 5px 0px rgba(0, 0, 0, 0.47);
+          box-shadow: -10px 10px 5px 0px rgba(0, 0, 0, 0.47);
 }
 
 main .projects .project1 .projectImg,
@@ -757,6 +763,6 @@ main .contact .contactList i:hover {
     width: 100%;
   }
   main .contact .contactList {
-    padding-top: 30px;
+    margin-top: 25%;
   }
 }
